[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Enemyclass.gd" type="Script" id=1]
[ext_resource path="res://assets/enemy2anim.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sonds/gyahahaha.ogg" type="AudioStream" id=4]
[ext_resource path="res://music/action.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sonds/alarm.ogg" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 30 )

[sub_resource type="CircleShape2D" id=2]
radius = 350.0

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
position = Vector2( 0, 542.642 )
collision_layer = 1030
collision_mask = 1030
script = ExtResource( 1 )
damage = 1
health = 3
stun2 = 75
type = "shooter"
bolts_spwned_upon_death = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Scale" parent="." instance=ExtResource( 2 )]
position = Vector2( -5.22031, -25.84 )
scale = Vector2( 0.5, 0.5 )

[node name="Area2D" type="Area2D" parent="." groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 2 )

[node name="Vision" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 1000 )
collision_mask = 8

[node name="Ground_Detect" type="RayCast2D" parent="."]
position = Vector2( -1.05264, 0 )
cast_to = Vector2( 0, 31 )

[node name="Health" parent="." instance=ExtResource( 3 )]
time = 4.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Damage" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 60, 0 )
collision_mask = 4

[node name="Polygon2D2" type="Polygon2D" parent="."]
editor/display_folded = true
visible = false
polygon = PoolVector2Array( -26.655, -21.4385, -34.1109, -28.6685, -47.4196, -29.4182, -42.5245, -46.0266, -25.042, -49.6979, -18.5213, -38.3837, -28.2366, -29.3463, -26.4291, -20.9866 )

[node name="Polygon2D" type="Polygon2D" parent="Polygon2D2"]
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( -38.2537, -45.0156, -36.8401, -33.7065, -33.2417, -34.4775, -34.3983, -45.6581 )

[node name="Polygon2D3" type="Polygon2D" parent="Polygon2D2"]
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( -36.3583, -32.7957, -35.4609, -30.0135, -31.9608, -31.629, -32.3198, -32.8854 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
autoplay = true
max_distance = 500.0
attenuation = 0.965937

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true
max_distance = 960.0
attenuation = 0.965937

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 10.0
max_distance = 960.0
attenuation = 0.965937

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
